# JobFlow

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
.github/workflows/: blank.yml
jobflow/analysis_cv/: api_handler.py
jobflow/auto_response/: app.py  bd_send.py  requirements.txt
jobflow/telegram_bot/: handlers.py  main.py  states.py
